[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scenes/Backgrounds/ColourfullBackground/ColourfullBackground.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/DefaultWorld/FruitManager.gd" type="Script" id=2]
[ext_resource path="res://CustomNodes/AudioPlayer/AudioPlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/DefaultWorld/DefaultWorld.gd" type="Script" id=4]
[ext_resource path="res://Scenes/DefaultWorld/Shadow/Shadow.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fonts/font.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scenes/DefaultWorld/WeaponsManager.gd" type="Script" id=7]
[ext_resource path="res://Scenes/DefaultWorld/Hud.gd" type="Script" id=8]
[ext_resource path="res://Scenes/DefaultWorld/Parallax/Stars/Star.tscn" type="PackedScene" id=10]
[ext_resource path="res://Musics/Valentine-Quest__-Upbeat-Romantic-8-Bit-Game-Music-by-HeatleyBros.ogg" type="AudioStream" id=11]
[ext_resource path="res://Musics/8-Bit-Happy__-Querky-Fun-Chiptune-Game-Music-by-HeatleyBros.ogg" type="AudioStream" id=12]
[ext_resource path="res://Scenes/DefaultWorld/AssistantsManager.gd" type="Script" id=13]
[ext_resource path="res://Musics/8-Bit-Fun - Happy-Cute Chiptune-Game Music by HeatleyBros.ogg" type="AudioStream" id=14]
[ext_resource path="res://Musics/8-Bit-World__-Fun-Upbeat-Chiptune-Game-Music-by-HeatleyBros.ogg" type="AudioStream" id=15]
[ext_resource path="res://Musics/Feeling-Lucky__-Funky-8-Bit-Game-Music-By-HeatleyBros.ogg" type="AudioStream" id=16]
[ext_resource path="res://Scenes/DefaultWorld/Hud/FruitBar/FruitBar.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/DefaultWorld/Hud/JuiceBottleManager/JuiceBottleManager.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/DefaultWorld/Hud/JuiceDropsManager/JuiceDropsManager.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scenes/DefaultWorld/Hud/ChangeWeaponButton/ChangeWeaponButton.tscn" type="PackedScene" id=20]
[ext_resource path="res://Scenes/DefaultWorld/Label.gd" type="Script" id=21]
[ext_resource path="res://CustomNodes/AudioPlayer/AudioPlayerPressing.gd" type="Script" id=22]
[ext_resource path="res://Scenes/DefaultWorld/Hud/ScreenDarkener/ScreenDarkener.tscn" type="PackedScene" id=23]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_blend_mode = 1
glow_hdr_threshold = 1.2
glow_bicubic_upscale = true

[node name="DefaultWorld" type="Node2D"]
script = ExtResource( 4 )

[node name="Backgrounds" type="CanvasLayer" parent="."]
layer = -1

[node name="ColourfullBackground" parent="Backgrounds" instance=ExtResource( 1 )]

[node name="ScreenDarkener" parent="Backgrounds" instance=ExtResource( 23 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 0, 1200 )

[node name="Star" parent="ParallaxBackground/ParallaxLayer" instance=ExtResource( 10 )]
position = Vector2( 97.3737, 84.8528 )

[node name="Star2" parent="ParallaxBackground/ParallaxLayer" instance=ExtResource( 10 )]
position = Vector2( 272.736, 319.612 )

[node name="Star3" parent="ParallaxBackground/ParallaxLayer" instance=ExtResource( 10 )]
position = Vector2( 575.378, 164.049 )

[node name="Star4" parent="ParallaxBackground/ParallaxLayer" instance=ExtResource( 10 )]
position = Vector2( 100.202, 557.2 )

[node name="Star5" parent="ParallaxBackground/ParallaxLayer" instance=ExtResource( 10 )]
position = Vector2( 561.236, 636.396 )

[node name="Star6" parent="ParallaxBackground/ParallaxLayer" instance=ExtResource( 10 )]
position = Vector2( 103.03, 882.47 )

[node name="Star7" parent="ParallaxBackground/ParallaxLayer" instance=ExtResource( 10 )]
position = Vector2( 391.53, 970.151 )

[node name="Star8" parent="ParallaxBackground/ParallaxLayer" instance=ExtResource( 10 )]
position = Vector2( 671.544, 1221.88 )

[node name="Hud" type="CanvasLayer" parent="."]
layer = 0
follow_viewport_enable = true
script = ExtResource( 8 )

[node name="Tween" type="Tween" parent="Hud"]

[node name="Counter" type="Label" parent="Hud"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -367.0
margin_top = 96.0
margin_right = -52.0
margin_bottom = 215.0
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WeaponInterfacePlaceholder" type="Control" parent="Hud"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -8.0
margin_top = -48.0
margin_right = -8.0
margin_bottom = -45.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AutoAtack" type="Button" parent="Hud"]
self_modulate = Color( 1, 1, 1, 0.5 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -125.0
margin_top = -76.0
toggle_mode = true
text = "Auto Attaque"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FruitBar" parent="Hud" instance=ExtResource( 17 )]
position = Vector2( 538.632, 53.3943 )

[node name="JuiceBottleManager" parent="Hud" instance=ExtResource( 18 )]

[node name="JuiceDropsManager" parent="Hud" instance=ExtResource( 19 )]
particlePlaceholderPath = NodePath("../HudParticlesPlaceholder")
juiceBottleManagerPath = NodePath("../JuiceBottleManager")

[node name="HudParticlesPlaceholder" type="Node2D" parent="Hud"]

[node name="ChangeWeaponButton" parent="Hud" instance=ExtResource( 20 )]
margin_top = -138.0
margin_right = 139.0
margin_bottom = -15.0

[node name="AssistantsManager" type="Node2D" parent="Hud"]
script = ExtResource( 13 )
weaponInterfacePlaceholderPath = NodePath("../WeaponInterfacePlaceholder")
fruitManagerPath = NodePath("../../FruitManager")

[node name="LeftSpawnPos" type="Position2D" parent="Hud/AssistantsManager"]
position = Vector2( -228.844, 747.981 )

[node name="RightSpawnPos" type="Position2D" parent="Hud/AssistantsManager"]
position = Vector2( 952.312, 776.85 )

[node name="Label" type="Label" parent="Hud"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -705.284
margin_top = 97.0666
margin_right = -390.284
margin_bottom = 216.067
custom_fonts/font = ExtResource( 6 )
text = "0"
align = 1
valign = 1
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="FruitManager" type="Node2D" parent="."]
position = Vector2( 518.564, 492.082 )
script = ExtResource( 2 )
rootSignalNodePath = NodePath("..")
particlesPlaceholderPath = NodePath("../ParticlesPlaceholder")

[node name="FruitSlot" type="Position2D" parent="FruitManager"]

[node name="Shadow" parent="FruitManager" instance=ExtResource( 5 )]
show_behind_parent = true
position = Vector2( 0, 72 )

[node name="WeaponsManager" type="Node2D" parent="."]
position = Vector2( 278.6, 472.347 )
script = ExtResource( 7 )
weaponInterfacePlaceholderPath = NodePath("../Hud/WeaponInterfacePlaceholder")
signalNode = NodePath("..")
worldMusicsPath = NodePath("../AudioPlayer")
screenDarkenerPath = NodePath("../Backgrounds/ScreenDarkener")

[node name="HammerPosition" type="Position2D" parent="WeaponsManager"]
position = Vector2( 6.71063, -29.6985 )

[node name="LyrePosition" type="Position2D" parent="WeaponsManager"]
position = Vector2( -88, 0 )

[node name="PistolPosition" type="Position2D" parent="WeaponsManager"]
position = Vector2( -104, -88 )
rotation = 0.46977

[node name="GuitarPosition" type="Position2D" parent="WeaponsManager"]
position = Vector2( -120, -104 )

[node name="ParticlesPlaceholder" type="Node2D" parent="."]

[node name="TestingTimer" type="Timer" parent="."]
wait_time = 0.15

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="AudioPlayer" parent="." instance=ExtResource( 3 )]
script = ExtResource( 22 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 14 )
volume_db = -15.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 12 )
volume_db = -15.0

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 15 )
volume_db = -15.0

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 16 )
volume_db = -15.0

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="AudioPlayer"]
stream = ExtResource( 11 )
volume_db = -15.0

[connection signal="tree_entered" from="." to="." method="_on_DefaultWorld_tree_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_DefaultWorld_tree_exiting"]
[connection signal="pressed" from="Hud/AutoAtack" to="." method="_on_AutoAtack_pressed"]
[connection signal="button_down" from="Hud/ChangeWeaponButton" to="." method="_on_ChangeWeaponButton_button_down"]
[connection signal="FruitChanged" from="FruitManager" to="WeaponsManager" method="_on_FruitManager_FruitChanged"]
[connection signal="weaponChanged" from="WeaponsManager" to="Hud/AssistantsManager" method="_on_WeaponsManager_weaponChanged"]
[connection signal="timeout" from="TestingTimer" to="." method="_on_TestingTimer_timeout"]
[connection signal="tree_exiting" from="AudioPlayer" to="AudioPlayer" method="_on_Musics_tree_exiting"]
